--- a/index.html
+++ b/index.html
@@ -89,36 +89,14 @@
                     którzy z humorem i szczerością biorą na warsztat najtrudniejsze tematy technologiczne.
                 </p>
             </div>
-            <img class="pt-[47px] md:flex hidden pointer-events-none" src="./assets/images/svg/cross.svg" alt="">
-        </div>
-        <img class="absolute md:flex hidden bottom-0 right-0 w-full pointer-events-none"
-            src="./assets/images/png/cloud-white.png" alt="white cloud">
-    </section>
-    <!--------------------- podcast section --------------------->
-    <section id="podcast"
-        class="lg:min-h-[1007px] md:min-h-[700px] sm:min-h-[550px] min-h-[415px] relative max-w-[1920px] w-full mx-auto lg:pt-[58px] md:pt-[50px] pt-[37px]">
-        <img class="absolute top-[88px] max-lg:hidden right-[120px] pointer-events-none"
-            src="./assets/images/svg/rounded-cross.svg" alt="rounded-cross">
-        <img class="absolute top-[212px] max-md:hidden right-[-56px] pointer-events-none"
-            src="./assets/images/svg/cross.svg" alt="cross">
-        <div class="max-w-[1240px] mx-auto px-[30px] w-full">
-            <div class="max-w-[592px] mx-auto w-full">
-                <p
-                    class="font-medium lg:text-[24px] md:text-[18px] sm:text-[16px] text-[12px] leading-[120%] text-center uppercase font-tomorrow">
-                    Stworzyliśmy ten podcast, bo sami szukaliśmy miejsca, które łączy wiedzę, praktykę i dystans do
-                    branży IT.</p>
-                <p
-                    class="font-medium lg:text-[24px] md:text-[18px] sm:text-[16px] text-[12px] leading-[120%] text-center uppercase font-tomorrow lg:pt-[59px] md:pt-12 sm:pt-10 pt-[15px]">
-                    <b class="!font-semibold">Każdy odcinek to dawka trendów,</b> innowacji i konkretnych rozwiązań.
-                </p>
-            </div>
+            <img class="pt-[66px] pointer-events-none" src="./assets/images/svg/cross.svg" alt="">
         </div>
         <img class="absolute pointer-events-none bottom-0 left-0 right-0 w-full max-h-[314px] sm:max-h-[1000px]"
             src="./assets/images/png/two-man-with-podcast.png" alt="podcast">
     </section>
     <!-------------------NAS SECTION--------------------->
-    <section class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
-        <div class="max-w-[1240px] mx-auto lg:pt-[165px] md:pt-[140px] pt-[70px] xl:pb-[258px] lg:pb-[120px]">
+    <section id="oNas" class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto xl:min-h-[1443px]">
+        <div class="max-w-[1240px] mx-auto lg:pt-[160px] md:pt-[140px] pt-[70px] xl:pb-[240px] lg:pb-[120px]">
             <div class="lg:flex px-[30px]">
                 <div class="lg:max-w-md">
                     <h2 class="font-semibold text-[64px] text-light-black font-tomorrow leading-[100%] uppercase">
@@ -179,20 +157,20 @@
                 </div>
                 <div>
                     <img src="./assets/images/svg/circle.svg" alt="decorative circle"
-                        class="absolute lg:top-[6%] lg:right-[-10.5%] xl:size-[303px] lg:size-[230px] md:size-[100px] size-12 top-0 ">
+                        class="absolute lg:top-[5%] lg:right-[-10.5%] xl:size-[303px] lg:size-[230px] md:size-[100px] size-12 top-0 ">
                     <img src="./assets/images/png/two-people.png" alt="Two people"
                         class="xl:max-w-[1000px] lg:max-w-[700px] md:max-w-[600px] lg:absolute xl:top-[8%] top-[11%] right-[0%] object-cover rounded-lg z-0" />
                 </div>
             </div>
         </div>
-        <img src="./assets/images/png/layer-svg.png" alt="decorative layer" class="z-20 absolute bottom-0">
+        <img src="./assets/images/png/layer.png" alt="decorative layer" class="z-20 absolute bottom-0 xl:min-h-[250px]">
     </section>
     <!-------------------USŁUGI SECTION------------------->
-    <section class="pt-16 md:pb-[139px] pb-14 bg-light-black max-w-[1920px] mx-auto">
+    <section class="pt-1 md:pb-[139px] pb-14 bg-light-black max-w-[1920px] mx-auto xl:min-h-[870px]">
         <div class="container mx-auto max-w-[1240px] px-[30px]">
             <div class="flex justify-between">
                 <h2
-                    class="md:text-[64px] text-5xl uppercase text-white xl:pb-[176px] lg:pb-32 md:pb-[76px] pb-14 font-medium font-tomorrow">
+                    class="md:text-[64px] text-5xl uppercase text-white xl:pb-[170px] lg:pb-32 md:pb-[76px] pb-14 font-medium font-tomorrow">
                     Usługi</h2>
                 <img src="./assets/images/svg/faq-arrow.svg" alt="faq-arrow"
                     class="lg:pb-[93px] pb-[40px]  max-lg:size-28 max-md:size-20">
@@ -201,7 +179,7 @@
                 <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-500 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
-                        class="accordion-header w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
+                        class="accordion-header md:h-[90px] w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
                         SZKOLENIA OTWARTE
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
@@ -217,7 +195,7 @@
                 <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-500 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
-                        class="accordion-header w-full uppercase flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
+                        class="accordion-header md:h-[90px] w-full uppercase flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
                         Szkolenia dla firm
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
@@ -233,7 +211,7 @@
                 <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-500 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
-                        class="accordion-header uppercase w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
+                        class="accordion-header md:h-[90px] uppercase w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
                         Konsultacje
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
@@ -249,7 +227,7 @@
                 <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-500 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
-                        class="accordion-header uppercase w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
+                        class="accordion-header md:h-[90px] uppercase w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
                         Doradztwo
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
@@ -268,25 +246,30 @@
         </div>
     </section>
     <!-------------------PROTOPIA SECTION------------------->
-    <section class="bg-orange relative max-w-[1920px] mx-auto">
+    <section class="bg-orange relative max-w-[1920px] mx-auto xl:min-h-[612px]">
         <div class="container max-w-[1240px] mx-auto">
-            <div class="flex md:pt-24 pt-14 xl:pb-80 md:pb-64 pb-32 px-[30px] ">
-                <div class="flex flex-col md:flex-row  gap-5">
-                    <img src="./assets/images/png/protopia-img.png" alt="protopia-img" class="md:size-[225px] w-full">
+            <div class="md:flex md:pt-[91px] pt-14 xl:pb-[296px] md:pb-64 pb-24 px-[30px] ">
+                <div class="flex flex-row  gap-5">
+                    <img src="./assets/images/png/protopia-img.png" alt="protopia-img"
+                        class="md:size-[225px] size-[100px]">
                     <div class="flex flex-col">
                         <h1
-                            class="md:text-3xl text-2xl lg:text-4xl pb-[17px] leading-[100%] max-w-[864px] uppercase font-semibold font-inter text-white">
+                            class="md:text-3xl text-sm lg:text-4xl md:pb-[17px] pb-[10px] !leading-[130%] max-w-[864px] uppercase font-semibold font-inter text-white">
                             Słuchasz Patoarchitektów dzięki firmie Protopia.
                         </h1>
-                        <p class="text-xl text-white uppercase leading-[100%]">
+                        <p class="md:text-xl text-xs text-white uppercase leading-[100%]">
                             Doradzamy, szkolimy i wdrażamy innowacje, które napędzają rozwój firm.
                         </p>
                         <button
-                            class="xl:mt-[65px] lg:mt-9 md:mt-[43px] mt-6 md:px-11 px-9 py-[9px] border border-black text-black  rounded-full md:text-2xl text-xl leading-[100%] font-medium w-fit hover:bg-white font-inter transition">
+                            class="hidden md:block xl:mt-[42px] lg:mt-6 md:mt-[40px] mt-6 md:px-11 px-9 py-[9px] border border-black text-black  rounded-full md:text-2xl text-xl leading-[100%] font-medium w-fit hover:bg-white font-inter transition">
                             POZNAJ NASZĄ OFERTĘ
                         </button>
                     </div>
                 </div>
+                <button
+                    class="mb-20 block md:hidden mt-6 whitespace-nowrap px-11 border border-black text-black  rounded-full text-xl leading-[100%] font-medium w-fit hover:bg-white font-inter transition">
+                    POZNAJ NASZĄ OFERTĘ
+                </button>
             </div>
             <img src="./assets/images/png/cloud-1.png" alt="cloud-1" class="absolute bottom-0 right-0">
     </section>
@@ -320,8 +303,8 @@
         <img class="absolute right-0 bottom-0 pointer-events-none max-sm:max-w-[114px] max-sm:max-h-[166px] max-md:max-w-[300px]"
             src="./assets/images/svg/horse.svg" alt="horse-img">
     </section>
-    <!--------------------- footer --------------------->
-    <footer id="footer"
+    <!-- footer -->
+    <footer
         class="bg-light-black px-[30px] max-w-[1920px] mx-auto sm:px-5 lg:px-[110px] relative pb-[35px] sm:pb-[65px]">
         <div class="max-w-[1240px] mx-auto">
             <div
