--- a/helper.html
+++ b/helper.html
@@ -24,12 +24,11 @@
                 ODCINKI
             </h2>
 
-            <div
-                class="pt-[43px] max-[426px]:pt-[23px] flex flex-col gap-5 max-[769px]:gap-[55px]">
+            <div class="pt-[43px] max-[426px]:pt-[23px] flex flex-col gap-5 max-[769px]:gap-[55px]">
                 <div class="flex max-[769px]:flex-wrap gap-[30px] max-[769px]:gap-[20px] py-10 max-[769px]:py-0">
                     <div>
                         <iframe width="400" height="300"
-                            class="rounded-[30px] max-[768px]:w-[330px] max-[768px]:h-[195px] "
+                            class="rounded-[30px] max-[768px]:w-[330px] max-[768px]:h-[195px] max-[425px]:w-[300px]"
                             src="https://www.youtube.com/embed/xAt1xcC6qfM?si=6cunyjaHxX6_KM_p"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -75,7 +74,7 @@
                 <div class="flex max-[769px]:flex-wrap gap-[30px] max-[769px]:gap-[20px] py-10 max-[769px]:py-0">
                     <div>
                         <iframe width="400" height="300"
-                            class="rounded-[30px] max-[768px]:w-[330px] max-[768px]:h-[195px] "
+                            class="rounded-[30px] max-[768px]:w-[330px] max-[768px]:h-[195px] max-[425px]:w-[300px]"
                             src="https://www.youtube.com/embed/xAt1xcC6qfM?si=6cunyjaHxX6_KM_p"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -121,7 +120,7 @@
                 <div class="flex max-[769px]:flex-wrap gap-[30px] max-[769px]:gap-[20px] py-10 max-[769px]:py-0">
                     <div>
                         <iframe width="400" height="300"
-                            class="rounded-[30px] max-[768px]:w-[330px] max-[768px]:h-[195px] "
+                            class="rounded-[30px] max-[768px]:w-[330px] max-[768px]:h-[195px] max-[425px]:w-[300px]"
                             src="https://www.youtube.com/embed/xAt1xcC6qfM?si=6cunyjaHxX6_KM_p"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -167,7 +166,7 @@
                 <div class="flex max-[769px]:flex-wrap gap-[30px] max-[769px]:gap-[20px] py-10 max-[769px]:py-0">
                     <div>
                         <iframe width="400" height="300"
-                            class="rounded-[30px] max-[768px]:w-[330px] max-[768px]:h-[195px] "
+                            class="rounded-[30px] max-[768px]:w-[330px] max-[768px]:h-[195px] max-[425px]:w-[300px]"
                             src="https://www.youtube.com/embed/xAt1xcC6qfM?si=6cunyjaHxX6_KM_p"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -213,7 +212,7 @@
                 <div class="flex max-[769px]:flex-wrap gap-[30px] max-[769px]:gap-[20px] py-10 max-[769px]:py-0">
                     <div>
                         <iframe width="400" height="300"
-                            class="rounded-[30px] max-[768px]:w-[330px] max-[768px]:h-[195px] "
+                            class="rounded-[30px] max-[768px]:w-[330px] max-[768px]:h-[195px] max-[425px]:w-[300px]"
                             src="https://www.youtube.com/embed/xAt1xcC6qfM?si=6cunyjaHxX6_KM_p"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -257,7 +256,13 @@
                     </div>
                 </div>
             </div>
+            <button type="button" class="mb-[250px] text-base sm:text-lg md:text-xl lg:text-2xl text-white font-tomorrow uppercase leading-[28px] sm:leading-[30px] lg:leading-[32px] font-semibold border-2 rounded-full 
+         px-6 sm:px-10 md:px-[50px] lg:px-[61.7px] py-2 sm:py-[4.5px] border-white mt-5 
+         hover:bg-white hover:text-black transition-all duration-300 ease-in-out">
+                Wszystkie Odcinki
+            </button>
         </div>
+        <img class="w-full absolute bottom-0" src="./assets/images/png/cloud-1.png" alt="bottom-cloud-img">
     </section>
     <script src="./assets/js/app.js"></script>
 </body>
